# os

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  .vale.ini  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  mkdocs.yml
.ai/: ARCHITECTURE.md  AUTOMATION_COMMANDS.md  CODE_PATTERNS.md  GIT_WORKFLOW.md  HOST_BOUNDARY_CONTRACTS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NAMING_CONVENTIONS.md  OPERATIONAL_CONTRACTS.md  SYSTEMS-EVALUATION-ROADMAP.md  VALIDATION_RULES.md  WEEK-1-ACTIVATION-PLAN.md  WORKSPACE_TOPOLOGY.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: docs-audit.yml  docs.yml
.playwright/: cli.config.json
.playwright-cli/: page-2026-02-25T20-45-07-158Z.yml  page-2026-02-26T00-18-31-674Z.yml  page-2026-02-26T00-18-46-134Z.yml  page-2026-02-26T00-21-02-529Z.yml  page-2026-02-26T00-21-12-149Z.yml  page-2026-02-26T00-22-09-536Z.yml  page-2026-02-26T00-22-20-510Z.yml  page-2026-02-26T00-23-43-648Z.yml  page-2026-02-26T00-23-54-757Z.yml  page-2026-02-26T00-24-11-640Z.yml  page-2026-02-26T00-25-49-479Z.yml  page-2026-02-26T00-26-13-610Z.yml  page-2026-02-26T00-29-21-769Z.yml  page-2026-02-26T00-31-30-059Z.yml  page-2026-02-26T00-33-03-454Z.yml  page-2026-02-26T00-35-52-894Z.yml  page-2026-02-26T00-36-32-161Z.yml  page-2026-02-26T00-38-58-757Z.yml  page-2026-02-26T00-55-02-087Z.yml  page-2026-02-26T01-40-41-713Z.yml  page-2026-02-26T01-41-40-063Z.yml  page-2026-02-26T01-41-52-519Z.yml  page-2026-02-26T01-42-08-262Z.yml  page-2026-02-26T01-43-56-247Z.yml  page-2026-02-26T01-44-02-973Z.yml  page-2026-02-26T01-44-14-103Z.yml  page-2026-02-26T01-44-14-437Z.yml  page-2026-02-26T01-44-51-654Z.yml  page-2026-02-26T01-44-52-258Z.yml  page-2026-02-26T01-45-00-212Z.yml  page-2026-02-26T01-45-08-030Z.yml  page-2026-02-26T01-45-08-383Z.yml  page-2026-02-26T01-45-19-478Z.yml  page-2026-02-26T01-45-39-350Z.yml  page-2026-02-26T01-45-41-129Z.yml  page-2026-02-26T01-45-42-494Z.yml  page-2026-02-26T01-48-17-075Z.yml  page-2026-02-26T01-48-18-518Z.yml  page-2026-02-26T01-48-18-865Z.yml  page-2026-02-26T01-48-20-249Z.yml  (+57 more)
crates/apps/notepad/: Cargo.toml  app.manifest.toml
crates/apps/notepad/src/: lib.rs
crates/apps/terminal/: Cargo.toml
crates/apps/terminal/src/: lib.rs
crates/desktop_app_contract/: Cargo.toml
crates/desktop_app_contract/src/: lib.rs
crates/desktop_runtime/: Cargo.toml  build.rs
crates/desktop_runtime/src/: app_runtime.rs  apps.rs  components.rs  host.rs  icons.rs  lib.rs  model.rs  persistence.rs  reducer.rs  runtime_context.rs  shell.rs  wallpaper.rs  window_manager.rs
crates/desktop_runtime/src/apps/: placeholders.rs
crates/desktop_runtime/src/components/: a11y.rs  display_properties.rs  menus.rs  taskbar.rs  taskbar_input.rs  window.rs
crates/desktop_runtime/src/host/: boot.rs  host_ui.rs  persistence_effects.rs  wallpaper_effects.rs
crates/desktop_runtime/src/reducer/: appearance.rs
crates/desktop_runtime/src/shell/: policy.rs
crates/desktop_runtime/src/shell/commands/: apps.rs  config.rs  data.rs  filesystem.rs  inspect.rs  mod.rs  theme.rs  windows.rs
crates/desktop_tauri/: Cargo.toml  tauri.conf.json
crates/desktop_tauri/capabilities/: default.json
crates/desktop_tauri/src/: lib.rs
crates/platform_host/: Cargo.toml
crates/platform_host_web/: Cargo.toml
crates/platform_host_web/src/: adapters.rs  bridge.rs  lib.rs  wallpaper.rs
crates/platform_host_web/src/bridge/: mod.rs
crates/platform_host_web/src/bridge/interop/: mod.rs  non_wasm.rs  wasm.rs
crates/platform_host_web/src/cache/: cache_api.rs  mod.rs
crates/platform_host_web/src/fs/: explorer.rs  mod.rs
crates/platform_host_web/src/storage/: indexed_db.rs  local_prefs.rs  mod.rs
crates/platform_storage/: Cargo.toml
crates/platform_storage/src/: host_adapters.rs  lib.rs  wasm_bridge.rs
crates/site/: Cargo.toml  index.html
crates/site/src/: lib.rs  main.rs  theme_shell.css  web_app.rs
crates/site/src/theme_shell/: 00-foundations.css  00-tokens-reset.css  01-components-shell.css  01-primitives.css  02-interactions-hover.css  03-responsive-base.css  04-accessibility-motion.css  04-motion-base.css  05-wallpaper-renderer.css  10-theme-xp-tokens.css  11-theme-xp-overrides.css  20-theme-legacy95-tokens.css  21-theme-legacy95-overrides.css  30-theme-fluent-modern-tokens-core.css  31-theme-fluent-modern-primitives.css  32-theme-fluent-modern-theme-tokens.css  33-theme-fluent-modern-overrides.css  34-theme-soft-neumorphic-tokens.css  34-theme-soft-neumorphic.css  35-theme-soft-neumorphic-overrides.css
docs/: index.md
docs/adr/: ADR-0000-template.md  ADR-0001-documentation-system-adoption.md  ADR-0002-browser-host-abstraction-layer.md  ADR-0003-tauri-v2-desktop-architecture-migration.md  ADR-0004-unified-desktop-app-platform-contract-v2.md
docs/explanation/: documentation-architecture.md
docs/how-to/: update-documentation-in-a-pr.md
docs/reference/: cargo-e2e-desktop-platform-todo-spec.md  desktop-shell-fluent-modern-design-system.md  desktop-shell-hig-fluent-conformance-checklist.md  desktop-shell-hig-neumorphic-conformance-checklist.md  desktop-shell-neumorphic-design-system.md  desktop-wallpaper-subsystem-contract.md  documentation-contracts.md  documentation-metrics.md  documentation-toolchain-and-ci.md  owners-and-lifecycle.md  performance-engineering-and-benchmarking.md  project-command-entrypoints.md  rustdoc-and-github-wiki-documentation-strategy.md  system-architecture-assessment-and-target-state.md  system-terminal-command-interface.md  system-ui-component-library.md  ui-feedback-automation-and-baseline-workflow.md  unified-window-manager-and-app-contract.md  xtask-automation-runtime-architecture.md
docs/sop/: documentation-system-sop.md  performance-engineering-sop.md  quarterly-documentation-audit.md  sop-template.md  ui-design-conformance-review-sop.md
docs/tutorials/: first-documentation-change.md
output/playwright/: smoke_explorer_notepad_calc.js
scripts/ci/: verify.sh
scripts/dev/: setup-sccache.sh
scripts/docs/: validate_docs.py
scripts/ui/: capture-skin-matrix.sh  (+1 more)
xtask/: Cargo.toml
(+123 files in other folders)
