[workspace]
members = [
  "crates/apps/calculator",
  "crates/desktop_runtime",
  "crates/desktop_tauri",
  "crates/platform_host",
  "crates/platform_host_web",
  "crates/platform_storage",
  "crates/site",
  "crates/apps/explorer",
  "crates/apps/notepad",
  "crates/apps/terminal",
  "xtask",
]
resolver = "2"
