[package]
name = "desktop_app_contract"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dependencies]
futures = "0.3"
leptos = { version = "0.6", default-features = false }
platform_host = { path = "../platform_host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
system_shell_contract = { path = "../system_shell_contract" }
