[package]
name = "desktop_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "csr"]
ssr = ["leptos/ssr"]

[dependencies]
leptos = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
web-sys = { version = "0.3", features = ["MouseEvent", "Window", "Storage"] }

[dev-dependencies]
pretty_assertions = "1"
