[package]
name = "desktop_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = [
  "leptos/csr",
  "desktop_app_calculator/csr",
  "desktop_app_explorer/csr",
  "desktop_app_notepad/csr",
  "desktop_app_terminal/csr",
]
hydrate = [
  "leptos/hydrate",
  "csr",
  "desktop_app_calculator/hydrate",
  "desktop_app_explorer/hydrate",
  "desktop_app_notepad/hydrate",
  "desktop_app_terminal/hydrate",
]
ssr = [
  "leptos/ssr",
  "desktop_app_calculator/ssr",
  "desktop_app_explorer/ssr",
  "desktop_app_notepad/ssr",
  "desktop_app_terminal/ssr",
]

[dependencies]
desktop_app_calculator = { path = "../apps/calculator", default-features = false }
desktop_app_explorer = { path = "../apps/explorer", default-features = false }
desktop_app_notepad = { path = "../apps/notepad", default-features = false }
desktop_app_terminal = { path = "../apps/terminal", default-features = false }
leptos = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
web-sys = { version = "0.3", features = ["MouseEvent", "Window", "Storage"] }

[dev-dependencies]
pretty_assertions = "1"
