[package]
name = "desktop_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = [
  "leptos/csr",
  "desktop_app_contract/csr",
  "desktop_app_calculator/csr",
  "desktop_app_explorer/csr",
  "desktop_app_notepad/csr",
  "desktop_app_terminal/csr",
  "desktop_app_settings/csr",
  "platform_storage/csr",
]
desktop-tauri = ["csr", "platform_storage/desktop-host-tauri"]

[dependencies]
desktop_app_contract = { path = "../desktop_app_contract", default-features = false }
desktop_app_calculator = { path = "../apps/calculator", default-features = false }
desktop_app_explorer = { path = "../apps/explorer", default-features = false }
desktop_app_notepad = { path = "../apps/notepad", default-features = false }
desktop_app_terminal = { path = "../apps/terminal", default-features = false }
desktop_app_settings = { path = "../apps/settings", default-features = false }
js-sys = "0.3"
leptos = { version = "0.6", default-features = false }
platform_storage = { path = "../platform_storage", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "KeyboardEvent", "MouseEvent", "PointerEvent", "Storage", "Window"] }

[dev-dependencies]
pretty_assertions = "1"
