[package]
name = "desktop_tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop shell host for the shared retro desktop runtime."

[[bin]]
name = "desktop_tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
platform_host = { path = "../platform_host" }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
