[package]
name = "platform_host_web"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
platform_host = { path = "../platform_host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Notification", "Storage", "Window"] }

[dev-dependencies]
futures = "0.3"
