[package]
name = "platform_storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dependencies]
js-sys = "0.3"
leptos = { version = "0.6", default-features = false }
platform_host = { path = "../platform_host" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
