[package]
name = "platform_storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["csr"]
csr = ["leptos/csr"]
desktop-host-stub = []

[dependencies]
leptos = { version = "0.6", default-features = false }
platform_host = { path = "../platform_host" }
platform_host_web = { path = "../platform_host_web" }
serde = { version = "1", features = ["derive"] }
