[package]
name = "site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "site_app"
path = "src/main.rs"

[features]
default = ["csr"]
csr = ["desktop_runtime/csr", "leptos/csr", "leptos_meta/csr", "leptos_router/csr"]

[dependencies]
desktop_runtime = { path = "../desktop_runtime", default-features = false }
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
web-sys = { version = "0.3", features = ["Window", "Location"] }
